[package]
name = "html2text_rs_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "html2text_rs_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
rayon = "1.7.0"  # or the latest version
html2text = "0.6.0"  # or the latest version
walkdir = "2.3.2"  # or the latest version
anyhow = "1.0.44"  # or the latest version

[profile.release]
opt-level = 3
lto = true
panic = 'abort'
debug = false